--- a/marketing.html
+++ b/marketing.html
@@ -66,26 +66,32 @@
         <div>
             <div class="service-grid">
                 <div class="service-card">
+                    <img src="imgs/icons/rebrandind.png">
                     <h3>SEO Optimization</h3>
                     <p>Boost your website’s ranking with powerful SEO strategies.</p>
                 </div>
                 <div class="service-card">
+                     <img src="imgs/icons/socialmedia.png">
                     <h3>Social Media Marketing</h3>
                     <p>Engage your audience and grow your brand across social platforms.</p>
                 </div>
                 <div class="service-card">
+                     <img src="imgs/icons/packageDesign.png">
                     <h3>Content Marketing</h3>
                     <p>Create high-quality content that captivates and converts.</p>
                 </div>
                 <div class="service-card">
+                      <img src="imgs/icons/id.png">
                     <h3>Pay-Per-Click Advertising (PPC)</h3>
                     <p>Maximize ROI with targeted paid advertising campaigns.</p>
                 </div>
                 <div class="service-card">
+                     <img src="imgs/icons/custome website.png">
                     <h3>Email Marketing</h3>
                     <p>Personalized email campaigns to nurture leads and drive sales.</p>
                 </div>
                 <div class="service-card">
+                     <img src="imgs/icons/strategy.png">
                     <h3>Analytics & Performance Tracking</h3>
                     <p>Monitor, analyze, and improve your marketing efforts with data insights.</p>
                 </div>
@@ -135,11 +141,13 @@
             <!-- Basic Plan -->
             <div class="pricing-card">
                 <h3>Basic Plan</h3>
-                <p class="price">$199/month</p>
+                <p class="price">$150/month</p>
                 <ul>
-                    <li>SEO Optimization</li>
-                    <li>1 Social Media Platform</li>
-                    <li>Basic Analytics Report</li>
+                   <li>✔ Social Media Account Setup</li>
+                    <li>✔ Facebook Ads Campaign</li>
+                     <li>✔ Custome Posts designs</li>
+                     <li>✔ Account Management</li>
+                      <li>✔ Monthly Analytics Report</li>
                 </ul>
                 <button class="cta-btn">Choose Plan</button>
             </div>
@@ -147,11 +155,13 @@
             <!-- Standard Plan -->
             <div class="pricing-card featured">
                 <h3>Standard Plan</h3>
-                <p class="price">$399/month</p>
+                <p class="price">$250/month</p>
                 <ul>
-                    <li>Advanced SEO & Content Marketing</li>
-                    <li>3 Social Media Platforms</li>
-                    <li>Monthly Analytics & Reports</li>
+                   <li>✔ Everything in Basic</li>
+                        <li>✔ Email Marketing Campaign</li>
+                        <li>✔ SEO Optimization</li>
+                        <li>✔ Google Ads & Facebook Ads</li>
+                         <li>✔ Monthly Analytics Report</li>
                 </ul>
                 <button class="cta-btn">Get Started</button>
             </div>
@@ -159,11 +169,12 @@
             <!-- Pro Plan -->
             <div class="pricing-card">
                 <h3>Pro Plan</h3>
-                <p class="price">$699/month</p>
+                <p class="price">$350/month</p>
                 <ul>
-                    <li>Complete Digital Marketing Strategy</li>
-                    <li>Unlimited Social Media Platforms</li>
-                    <li>Weekly Performance Reports</li>
+                        <li>✔ Everything in Standard</li>
+                        <li>✔ Full Digital Marketing Strategy</li>
+                        <li>✔ Advanced Conversion Optimization</li>
+                        <li>✔ Monthly Analytics Report</li>
                 </ul>
                 <button class="cta-btn">Choose Plan</button>
             </div>
@@ -175,7 +186,7 @@
         <div class="cta-content">
             <h2>Ready to Elevate Your Brand?</h2>
             <p>Let's grow together! Get in touch for a free consultation and take your business to the next level.</p>
-            <a href="#contact-form" class="cta-btn">Book a Free Consultation</a>
+    
         </div>
     
         <!-- Contact Form -->
@@ -194,7 +205,7 @@
             <div class="popup-content">
                 <h3>Choose a Platform to Send Your Message</h3>
                 <div class="platform-options">
-                    <a href="https://wa.me/+260762357426" target="_blank">  <button class="platform-btn" id="whatsappBtn">
+                    <a href="https://wa.me/+263788513666" target="_blank">  <button class="platform-btn" id="whatsappBtn">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
                         WhatsApp
                     </button>
@@ -293,7 +304,7 @@
         <h2>Contact Us</h2>
         <div class="contact-container">
             <div class="contact-info">
-                <p> gfgmedia@gmail.com | +260 762 357 426</p>
+                <p> gfgmedia@gmail.com | +263 78 851 3666</p>
             </div>
             <div class="social-media">
                 <div class="icons">
