--- a/media.html
+++ b/media.html
@@ -171,7 +171,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card">
                         <h4>Basic</h4>
-                        <p class="price">k199</p>
+                        <p class="price">$10</p>
                         <ul>
                             <li>1-hour session</li>
                             <li>10 edited images</li>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="pricing-card standard">
                         <h4>Standard</h4>
-                        <p class="price">k399</p>
+                        <p class="price">$20</p>
                         <ul>
                             <li>2-hour session</li>
                             <li>25 edited images</li>
@@ -191,7 +191,7 @@
                     </div>
                     <div class="pricing-card">
                         <h4>Pro</h4>
-                        <p class="price">k699</p>
+                        <p class="price">$30</p>
                         <ul>
                             <li>Full-day shoot</li>
                             <li>50+ edited images</li>
@@ -208,7 +208,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card">
                         <h4>Basic</h4>
-                        <p class="price">k299</p>
+                        <p class="price">$15</p>
                         <ul>
                             <li>1-minute video</li>
                             <li>Basic editing</li>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="pricing-card standard">
                         <h4>Standard</h4>
-                        <p class="price">k599</p>
+                        <p class="price">$30</p>
                         <ul>
                             <li>3-minute video</li>
                             <li>Color grading</li>
@@ -228,7 +228,7 @@
                     </div>
                     <div class="pricing-card">
                         <h4>Pro</h4>
-                        <p class="price">k999</p>
+                        <p class="price">$40</p>
                         <ul>
                             <li>5+ minute video</li>
                             <li>Advanced cinematography</li>
@@ -245,7 +245,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card">
                         <h4>Basic</h4>
-                        <p class="price">k399</p>
+                        <p class="price">$20</p>
                         <ul>
                             <li>Simple cuts & transitions</li>
                             <li>Basic effects</li>
@@ -255,7 +255,7 @@
                     </div>
                     <div class="pricing-card standard">
                         <h4>Standard</h4>
-                        <p class="price">k799</p>
+                        <p class="price">$35</p>
                         <ul>
                             <li>Motion graphics & effects</li>
                             <li>Color correction</li>
@@ -265,7 +265,7 @@
                     </div>
                     <div class="pricing-card">
                         <h4>Pro</h4>
-                        <p class="price">k1,499</p>
+                        <p class="price">$50</p>
                         <ul>
                             <li>High-end CGI & VFX</li>
                             <li>Custom animations</li>
@@ -282,7 +282,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card">
                         <h4>Basic</h4>
-                        <p class="price">k99</p>
+                        <p class="price">$5</p>
                         <ul>
                             <li>Logo design</li>
                             <li>1 revision</li>
@@ -292,7 +292,7 @@
                     </div>
                     <div class="pricing-card standard">
                         <h4>Standard</h4>
-                        <p class="price">k249</p>
+                        <p class="price">$10</p>
                         <ul>
                             <li>Branding package</li>
                             <li>3 revisions</li>
@@ -302,7 +302,7 @@
                     </div>
                     <div class="pricing-card">
                         <h4>Pro</h4>
-                        <p class="price">k499</p>
+                        <p class="price">$20</p>
                         <ul>
                             <li>Complete brand identity</li>
                             <li>Unlimited revisions</li>
@@ -319,7 +319,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card">
                         <h4>Basic</h4>
-                        <p class="price">k149</p>
+                        <p class="price">$7</p>
                         <ul>
                             <li>1 ad concept</li>
                             <li>15-second video</li>
@@ -329,7 +329,7 @@
                     </div>
                     <div class="pricing-card standard">
                         <h4>Standard</h4>
-                        <p class="price">k349</p>
+                        <p class="price">$15</p>
                         <ul>
                             <li>3 ad variations</li>
                             <li>30-second video</li>
@@ -339,7 +339,7 @@
                     </div>
                     <div class="pricing-card">
                         <h4>Pro</h4>
-                        <p class="price">k699</p>
+                        <p class="price">$30</p>
                         <ul>
                             <li>Full campaign ads</li>
                             <li>60-second video</li>
@@ -377,7 +377,7 @@
             <div class="popup-content">
                 <h3>Choose a Platform to Send Your Message</h3>
                 <div class="platform-options">
-                    <a href="https://wa.me/+260762357426" target="_blank">  <button class="platform-btn" id="whatsappBtn">
+                    <a href="https://wa.me/+263788513666" target="_blank">  <button class="platform-btn" id="whatsappBtn">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
                         WhatsApp
                     </button>
@@ -476,7 +476,7 @@
         <h2>Contact Us</h2>
         <div class="contact-container">
             <div class="contact-info">
-                <p> gfgmedia@gmail.com | +260 762 357 426</p>
+                <p> gfgmedia@gmail.com | +263 78 851 3666</p>
             </div>
             <div class="social-media">
                 <div class="icons">
