--- a/software.html
+++ b/software.html
@@ -290,7 +290,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Basic</h4>
-                        <p class="price" style="color: #FFA500;">k999</p>
+                        <p class="price" style="color: #FFA500;">$50</p>
                         <ul style="color: #ccc;">
                             <li>5-page custom website</li>
                             <li>Responsive design</li>
@@ -300,7 +300,7 @@
                     </div>
                     <div class="pricing-card standard" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Standard</h4>
-                        <p class="price" style="color: #FFA500;">k2,499</p>
+                        <p class="price" style="color: #FFA500;">$100</p>
                         <ul style="color: #ccc;">
                             <li>Up to 10-page website</li>
                             <li>Custom CMS integration</li>
@@ -310,7 +310,7 @@
                     </div>
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Pro</h4>
-                        <p class="price" style="color: #FFA500;">k4,999</p>
+                        <p class="price" style="color: #FFA500;">$200</p>
                         <ul style="color: #ccc;">
                             <li>Unlimited pages</li>
                             <li>E-commerce functionality</li>
@@ -327,7 +327,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Basic</h4>
-                        <p class="price" style="color: #FFA500;">k2,999</p>
+                        <p class="price" style="color: #FFA500;">$100</p>
                         <ul style="color: #ccc;">
                             <li>Single platform (iOS or Android)</li>
                             <li>Basic UI/UX design</li>
@@ -337,7 +337,7 @@
                     </div>
                     <div class="pricing-card standard" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Standard</h4>
-                        <p class="price" style="color: #FFA500;">k5,999</p>
+                        <p class="price" style="color: #FFA500;">$200</p>
                         <ul style="color: #ccc;">
                             <li>Cross-platform development</li>
                             <li>Custom UI/UX design</li>
@@ -347,7 +347,7 @@
                     </div>
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Pro</h4>
-                        <p class="price" style="color: #FFA500;">k9,999</p>
+                        <p class="price" style="color: #FFA500;">$500</p>
                         <ul style="color: #ccc;">
                             <li>Advanced features & animations</li>
                             <li>Backend development</li>
@@ -364,7 +364,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Basic</h4>
-                        <p class="price" style="color: #FFA500;">k499</p>
+                        <p class="price" style="color: #FFA500;">$20</p>
                         <ul style="color: #ccc;">
                             <li>Wireframes & mockups</li>
                             <li>1 revision</li>
@@ -374,7 +374,7 @@
                     </div>
                     <div class="pricing-card standard" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Standard</h4>
-                        <p class="price" style="color: #FFA500;">k1,299</p>
+                        <p class="price" style="color: #FFA500;">$50</p>
                         <ul style="color: #ccc;">
                             <li>Interactive prototypes</li>
                             <li>3 revisions</li>
@@ -384,7 +384,7 @@
                     </div>
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Pro</h4>
-                        <p class="price" style="color: #FFA500;">k2,499</p>
+                        <p class="price" style="color: #FFA500;">$100</p>
                         <ul style="color: #ccc;">
                             <li>Full UI/UX design suite</li>
                             <li>Unlimited revisions</li>
@@ -401,7 +401,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Basic</h4>
-                        <p class="price" style="color: #FFA500;">k799</p>
+                        <p class="price" style="color: #FFA500;">$30</p>
                         <ul style="color: #ccc;">
                             <li>Single API integration</li>
                             <li>Basic documentation</li>
@@ -411,7 +411,7 @@
                     </div>
                     <div class="pricing-card standard" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Standard</h4>
-                        <p class="price" style="color: #FFA500;">k1,999</p>
+                        <p class="price" style="color: #FFA500;">$50</p>
                         <ul style="color: #ccc;">
                             <li>Multiple API integrations</li>
                             <li>Custom middleware</li>
@@ -421,7 +421,7 @@
                     </div>
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Pro</h4>
-                        <p class="price" style="color: #FFA500;">k3,999</p>
+                        <p class="price" style="color: #FFA500;">$150</p>
                         <ul style="color: #ccc;">
                             <li>Full API ecosystem setup</li>
                             <li>Real-time data sync</li>
@@ -438,7 +438,7 @@
                 <div class="pricing-grid">
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Basic</h4>
-                        <p class="price" style="color: #FFA500;">k99/month</p>
+                        <p class="price" style="color: #FFA500;">$5/month</p>
                         <ul style="color: #ccc;">
                             <li>Monthly updates</li>
                             <li>Bug fixes</li>
@@ -448,7 +448,7 @@
                     </div>
                     <div class="pricing-card standard" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Standard</h4>
-                        <p class="price" style="color: #FFA500;">k299/month</p>
+                        <p class="price" style="color: #FFA500;">$15/month</p>
                         <ul style="color: #ccc;">
                             <li>Weekly updates</li>
                             <li>Performance optimization</li>
@@ -458,7 +458,7 @@
                     </div>
                     <div class="pricing-card" style="background-color: #1a1a1a;">
                         <h4 style="color: #FFA500;">Pro</h4>
-                        <p class="price" style="color: #FFA500;">k499/month</p>
+                        <p class="price" style="color: #FFA500;">$20/month</p>
                         <ul style="color: #ccc;">
                             <li>24/7 monitoring</li>
                             <li>Unlimited updates</li>
@@ -494,7 +494,7 @@
             <div class="popup-content">
                 <h3>Choose a Platform to Send Your Message</h3>
                 <div class="platform-options">
-                    <a href="https://wa.me/+260762357426" target="_blank">  <button class="platform-btn" id="whatsappBtn">
+                    <a href="https://wa.me/+263788513666" target="_blank">  <button class="platform-btn" id="whatsappBtn">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
                         WhatsApp
                     </button>
